--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,30 @@
     <string name="connect_as_chef">Connect As Chef</string>
     <string name="connect_as_customer">Connect As Customer</string>
     <string name="connect_as_delivery_person">Connect As Delivery Person</string>
+    <string name="phone">Phone</string>
+    <string name="signin_with_d">SignIn With</string>
+    <string name="email_id">Email id</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="login">Login</string>
+    <string name="don_t_have_an_account_create">Don\'t Have An Account? Create</string>
+    <string name="or_d">OR</string>
+    <string name="phone_r">Phone</string>
+    <string name="firstname">FirstName</string>
+    <string name="email_r">Email</string>
+    <string name="signin_with_r">SignIn with</string>
+    <string name="or_r">OR</string>
+    <string name="register">Register</string>
+    <string name="city">City</string>
+    <string name="state">State</string>
+    <string name="pin_code">Pin Code</string>
+    <string name="area">Area</string>
+    <string name="house_streert_no">House/Streert no</string>
+    <string name="mobilenumber">MobileNumber</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="password_r">Password</string>
+    <string name="email_id_cr">Email id</string>
+    <string name="lastname">LastName</string>
 
     <string-array name="State">
         <item>Maharashtra</item>
